fix(chat-collector): 태그 빈 값과 후원 재시도 중복을 막는다 (POK-234)
로컬 리뷰 라운드 1·3에서 나온 것 둘.

첫째, broadcast_info.tags 에 NULL 원소가 하나라도 있으면 List.of 가 NPE 를
던져 방송 정보 창구가 500 이다. PostgreSQL TEXT[] 는 원소 NULL 을 허용하므로
저장은 성공하고 읽기만 터진다 — 그 행이 최신인 동안 그 방송의 창구가 영구히
죽고, clip 이 5xx 를 collector_unavailable 로 접어 화면에는 「수집 서버가
아프다」로 보인다. 실 PG 로 재현했다.

읽는 쪽과 쓰는 쪽을 나란히 고쳤다. 한쪽만 막으면 반쪽이 남는다 — 읽기만
고치면 앞으로 들어올 NULL 원소가 계속 쌓이고, 쓰기만 고치면 이미 들어간
행이 영영 500 을 낸다.

둘째, 후원 표에 지문 UNIQUE 가 없어 저장 재시도가 중복을 만들 수 있다.
배치 저장이 절단되면 커밋된 앞 행이 되돌려져 다시 들어가는데, 채팅은
ON CONFLICT 가 흡수하고 후원에는 흡수 장치가 없었다.

「같은 사람이 같은 금액을 두 번」이 접히는 대가는 없다 — 지문에 시각이
들어 있어서다. 접히는 것은 「같은 사람이 같은 밀리초에 같은 내용으로」뿐이고
후원은 결제 왕복을 거치므로 그것은 재시도 말고 일어나지 않는다. 채팅의
지문이 message_time 을 품는 것과 같은 설계다.

접힌 수는 0 이 아닐 때만 로그 한 줄로 낸다. 후원에서 접힘은 비정상 신호라
아무 창도 없으면 지문 계산이 나중에 틀려도 아무도 모른다.

V309 를 새로 만들지 않고 V307 을 고쳤다. 그 표는 이 PR 에서 처음 생겨
운영에 아직 없다 — 「만들고 곧바로 고쳤다」는 거짓 이력을 남길 이유가 없다.
대가는 로컬 DB 에 옛 V307 이 적용돼 있으면 다음 bootRun 이 체크섬 불일치로
거부되는 것이고, 처방은 services/CLAUDE.md 의 flyway repair 다.